--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -11,21 +11,22 @@
     
 
     <script>
-    alert("Let's play a game! No... not that one. Let's play ROCK, PAPER SCISSORS!")
+    alert("Let's play a game! No... not that one. Let's play ROCK, PAPER, SCISSORS!")
     let options = ['rock', 'paper', 'scissors']
     var playerTworesponse = options[Math.floor(Math.random() * options.length)];
     var playerOneresponse = prompt('Hi Player 1! Please type "rock", "paper" or "scissors".');
     alert("You chose " + playerOneresponse + ". I chose " + playerTworesponse + ".");
     if ((playerOneresponse === 'rock' && playerTworesponse === 'scissors') || (playerOneresponse === 'scissors' && playerTworesponse === 'paper') || (playerOneresponse === 'paper' && playerTworesponse === 'rock')) {
         alert('You win! Rematch?')
-    };
-    if ((playerOneresponse === 'rock' && playerTworesponse === 'rock') || (playerOneresponse === 'scissors' && playerTworesponse === 'scissors') || (playerOneresponse === 'paper' && playerTworesponse === 'paper')) {
+    }
+    else if(playerOneresponse === playerTworesponse) {
         alert("We're all losers today. Let's play again!")
-    };
-    if ((playerOneresponse === 'rock' && playerTworesponse === 'paper') || (playerOneresponse === 'scissors' && playerTworesponse === 'rock') || (playerOneresponse === 'paper' && playerTworesponse === 'scissors')) {
+    }
+    else {
         alert("You lose! Prepare for world domination.")
     };
-    if ((playerOneresponse !== 'rock') && (playerOneresponse !== 'paper') && (playerOneresponse !== 'scissors')) {
+    
+    if((playerOneresponse !== 'rock') && (playerOneresponse !== 'paper') && (playerOneresponse !== 'scissors')) {
         alert('Pick rock, paper or scissors, dummy!')
     };
 
