changed player 1 to player one

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     alert("Let's play a game! No... not that one. Let's play ROCK, PAPER, SCISSORS!")
     let options = ['rock', 'paper', 'scissors']
     var playerTworesponse = options[Math.floor(Math.random() * options.length)];
-    var playerOneresponse = prompt('Hi Player 1! Please type "rock", "paper" or "scissors".');
+    var playerOneresponse = prompt('Hi Player One! Please type "rock", "paper" or "scissors".');
     alert("You chose " + playerOneresponse + ". I chose " + playerTworesponse + ".");
     if ((playerOneresponse === 'rock' && playerTworesponse === 'scissors') || (playerOneresponse === 'scissors' && playerTworesponse === 'paper') || (playerOneresponse === 'paper' && playerTworesponse === 'rock')) {
         alert('You win! Rematch?')
