changed winning statement

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
     alert("You chose " + playerOneresponse.toLowerCase() + ". I chose " + playerTworesponse + ".");
     if  ((playerOneresponse.toLowerCase() === 'rock' && playerTworesponse === 'scissors') || (playerOneresponse.toLowerCase() === 'scissors' && playerTworesponse === 'paper') || (playerOneresponse.toLowerCase() === 'paper' && playerTworesponse === 'rock')){
-        alert('You win! Rematch?')
+        alert("Darn, you won!")
     }
     else if(playerOneresponse.toLowerCase() === playerTworesponse) {
         alert("We're all losers today. Let's play again!");
